--- a/client/NewComponent/ChangePassword_EditProfile/NewPassword/NewPassword.css
+++ b/client/NewComponent/ChangePassword_EditProfile/NewPassword/NewPassword.css
@@ -127,4 +127,29 @@
     border: 1px solid white;
     /* margin-left: 32px; */
   }
-  
+  .passwordsNew .submitClass:focus{
+    border: none;
+    outline: none;
+  }
+
+  .profile-loading{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, rgba(30,30,30,0.9), rgba(60,60,60, 0.8), rgba(90,90,90, 0.7));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: fadeIn 3s ease-in-out infinte;
+    z-index: 20;
+  }
+  @keyframes fadeIn {
+    0%, 100% {
+      background: linear-gradient(135deg, rgba(30,30,30, 0.9), rgba(60,60,60, 0.8), rgba(90,90,90, 0.7));
+    }
+    50% {
+      background: linear-gradient(135deg, rgba(30,30,30, 0.5), rgba(60,60,60, 0.4), rgba(90,90,90, 0.3));
+    }
+  }
