--- a/client/NewComponent/Child_Page_Ul/ChildPage.css
+++ b/client/NewComponent/Child_Page_Ul/ChildPage.css
@@ -36,10 +36,14 @@
      -webkit-overflow-scrolling: touch;
      gap: 0.5rem;
     /* margin-left: -2px; */
-    background-color: transparent;
+    /*background-color: yellowgreen; */
     align-items: center;
-    padding: 8px; 
-    
+    padding: 8px;  
+   
+}
+.category.hide{
+    opacity: 0;
+    visibility: hidden;
 }
 .category::-webkit-scrollbar{
     display: none;
@@ -70,8 +74,19 @@
     border-radius: 6px;
  }
  .category.select{
-    padding-bottom: 75px;
+    padding-bottom: 80px;
     padding-top: 16px;
+ }
+ .small-image{
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    border: 2px solid white;
+    background-color: green;
+    margin-top: 170px;
+    border-radius: 5px;
+    z-index: 50;
+    
  }
 .top-bar{
     display: flex;
@@ -86,7 +101,7 @@
     height: 40px;
     cursor: pointer;
     margin-top: 5px;
-    /* margin-bottom: 8px; */
+     margin-bottom: 0px;
     z-index: 20;
     position: relative; 
     /* position: sticky; */
@@ -94,6 +109,10 @@
     justify-content: space-between;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
+}
+.top-bar.hide{
+    opacity: 0;
+    visibility: hidden;
 }
 .top-bar.select{
     background-color: white;
@@ -124,9 +143,19 @@
 .span2{
     display: flex;
     flex-direction: row;
+    position: relative;
+    width: 100%;
+    height: 30px;
+    justify-items: center;
+    box-sizing: border-box;
+    margin-top: -10px;
 }
+
 .span2.loading{
     margin-left: -16px;
+}
+.span2.yes{
+    background-color: white;
 }
 
 .span2 span:first-child{
@@ -149,9 +178,44 @@
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 6px;
 }
+.span2 .span3{
+    position: absolute;
+    background-color: white;
+    display: flex;
+    left: 18%;
+    top: 0;
+     width: 22%;
+    white-space: nowrap;
+    align-items: center;
+    justify-content: center;
+}
 .span2 .span3.yes{
     background-color: white;
+    /* display: flex;
+     width: 20%;
+    white-space: nowrap;
+    align-items: center;
+    justify-content: center; */
     border: 1px solid rgba(0, 0, 0, 0.5);
+}
+.span2.loading .span3{
+    margin-left: 20%;
+}
+
+.span2 .span3.user{
+    margin-left: 0;
+
+}
+.span2 .span4{
+    position: absolute;
+    display: flex;
+    left: 50%;
+    top: 0;
+     width: 24%;
+     overflow: hidden;
+    white-space: nowrap;
+    align-items: center;
+    justify-content: center;
 }
 .span2 .span4.yes{
     background-color: white;
@@ -161,33 +225,64 @@
     visibility: hidden;
     opacity: 0;
 }
-.span2.loading .span5{
+
+.span2 .span5{
+    width: 20%; 
+    height: 21px;
+    left: 55%;
+    white-space: nowrap;
+    overflow: hidden;
     background-color: white !important;
     display: flex;
-    position: relative;
+    position: absolute;
     align-items: center;
     justify-content: center;
     box-shadow: none;
 }
-.span2 .span6{
+.span2.loading .span6{
+    margin-left: 0px;
+}
+.span2 .span6.yes{
+    width: 34px;
     background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+}
+.span2 .span6{
+    /* background-color: white;   */
+    position: absolute; 
+    left: 100%;
+    height: 21px;
+    top: 0;
+    width: 34px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.span2 .span6.null{
+    background-color: white;
+    /* width: 50%; */
+    display: flex;
+    flex-direction: row;
+    gap: 1;   
 }
 .main-body-home{
     display: flex;
     flex-direction: column;
-    min-height: 300px; 
+    min-height: 2650px; 
     margin-top: -5px;
     padding-bottom: 20px;
     overflow: hidden;
     width: 100%; 
+    
 }    
-/* .main-body-home.close{
-    visibility: hidden;
-} */
+
 .main-body-page{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    flex-direction: column;
+    position: relative;
+    height: auto;
 }
 .indicator{
     width: 70px;
@@ -195,6 +290,14 @@
     cursor: pointer;
     background-color: white;
     border-radius: 5px;
+}
+.indicator.hide{
+    opacity: 0;
+    visibility: hidden;
+}
+.indicator.close{
+    opacity: 0;
+    visibility: hidden;
 }
 .search{
     position: absolute;
@@ -246,4 +349,13 @@
     margin-top: 8px;
     width: 100%;
     justify-content: center;
+}
+.searchInputWrapper input:focus{
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+.h-image{
+   height: 22px !important;
+  
 }
