--- a/client/NewComponent/Child_Page_Ul/Other_Category/Cat_Index.css
+++ b/client/NewComponent/Child_Page_Ul/Other_Category/Cat_Index.css
@@ -1,11 +1,11 @@
 .other-category{
         width: 100%;
-        height: 470px;
+        height: auto;
         background-color: white;
         display: flex;
-        flex-direction: column;
         overflow: hidden;
         position: relative;
+        
         /* padding-top: 12px; */
 
 }
