--- a/client/NewComponent/FooterPage/AccountPage/StayInTouchPage/StayInTouch.css
+++ b/client/NewComponent/FooterPage/AccountPage/StayInTouchPage/StayInTouch.css
@@ -25,6 +25,7 @@ font-size: 20px;
     border: 1px solid rgba(255, 255, 255, 0.6);
     cursor: pointer;
     border-radius: 8px;
+    margin-bottom: 10px;
 }
 .stayInTouchClass .inputClass::placeholder{
     color: rgba(255, 255, 255, 0.5);
@@ -43,4 +44,9 @@ font-size: 20px;
     margin-left: 10px;
     color: rgba(0, 0, 0, 0.7);
     margin-bottom: 14px;
+    position: relative;
+}
+
+.stayInTouchClass .submitForm.down{
+    margin-top: 22.5px;
 }
