--- a/client/NewComponent/Icons/Icons.css
+++ b/client/NewComponent/Icons/Icons.css
@@ -48,7 +48,7 @@
     gap: 3px;
     cursor: pointer;
     width: 12%;
-    margin: 12px;
+    margin-top: 4px;
     padding: 8px 2px;
     border-radius: 2px;
     position: absolute;
