--- a/client/NewComponent/LoadingSpinner/CircularSpinner/Spinner.css
+++ b/client/NewComponent/LoadingSpinner/CircularSpinner/Spinner.css
@@ -73,6 +73,35 @@
     }
 }
 
+.loaderClass{
+    width: 15px;
+    height: 15px;
+    border: 4px solid transparent;
+    border-top: 4px solid green;
+    border-bottom: 4px solid green;
+    border-left: 4px solid blue;
+    border-right: 4px solid blue;
+    border-radius: 50%;
+    animation: ringPulse 0.5s ease-in-out infinite;
+    background-color: transparent;
+    box-shadow: none;
+}
+@keyframes ringPulse{
+    0% {
+        transform: rotate(0deg) scale(1);
+    }
+    50% {
+        transform: rotate(180deg) scale(1.2);
+        /* border-top: 4px solid blue;
+        border-bottom: 4px solid red; */
+    }
+    100% {
+        transform: rotate(360deg) scale(1);
+        /* border-top: 4px solid red;
+        border-bottom: 4px solid green; */
+    }
+}
+
 /* .small-spinner{
     width: 10px;
     height: 10px;
