--- a/client/NewComponent/MainBodyPage/Alerts.css
+++ b/client/NewComponent/MainBodyPage/Alerts.css
@@ -4,12 +4,18 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 8px;
     position: absolute;
-    display: block;
-    z-index: 10;
-    background-color: aqua;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    visibility: hidden;
+    z-index: 20;
+    background-color: lightblue;
 }
 .alert.success{
     color: green;
+    opacity: 1;
+    visibility: visible;
 }
 .alert.danger{
     color: red;
