--- a/client/NewComponent/Child_Page_Ul/ChildPage.css
+++ b/client/NewComponent/Child_Page_Ul/ChildPage.css
@@ -14,6 +14,7 @@
      /* -webkit-overflow-scrolling: touch; */
      /* gap: 0.5rem; */
 }
+
 /* .front-page.close{
     display: none;
 } */
@@ -38,12 +39,19 @@
     /* margin-left: -2px; */
     /*background-color: yellowgreen; */
     align-items: center;
-    padding: 8px;  
-   
+    padding: 0px 8px;  
+    flex-direction: row;
+    margin-bottom: -11px;
+    z-index: 1; 
+}
+.category.All{
+    padding-bottom: 16px;
 }
 .category.hide{
-    opacity: 0;
-    visibility: hidden;
+    display: none;
+}
+.category.YES{
+    display: none;
 }
 .category::-webkit-scrollbar{
     display: none;
@@ -73,6 +81,9 @@
  .category span.chose{
     border-radius: 6px;
  }
+ .category .span-class.All{
+    margin-bottom: 16px;
+ }
  .category.select{
     padding-bottom: 80px;
     padding-top: 16px;
@@ -81,12 +92,14 @@
     width: 70px;
     height: 70px;
     position: absolute;
+    display: none;
     border: 2px solid white;
     background-color: green;
-    margin-top: 170px;
-    border-radius: 5px;
-    z-index: 50;
-    
+    margin-top: 160px;
+    border-radius: 5px; 
+ }
+ .small-image.show{
+    display: flex;
  }
 .top-bar{
     display: flex;
@@ -111,8 +124,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 .top-bar.hide{
-    opacity: 0;
-    visibility: hidden;
+    display: none;
 }
 .top-bar.select{
     background-color: white;
@@ -267,13 +279,12 @@
 .main-body-home{
     display: flex;
     flex-direction: column;
-    min-height: 2650px; 
+    min-height: 2400px; 
     margin-top: -5px;
     padding-bottom: 20px;
     overflow: hidden;
-    width: 100%; 
-    
-}    
+    width: 100%;  
+} 
 
 .main-body-page{
     display: flex;
@@ -290,12 +301,17 @@
     cursor: pointer;
     background-color: white;
     border-radius: 5px;
+    z-index: 1;
 }
 .indicator.hide{
     opacity: 0;
     visibility: hidden;
 }
 .indicator.close{
+    opacity: 0;
+    visibility: hidden;
+}
+.indicator.YES{
     opacity: 0;
     visibility: hidden;
 }
