--- a/client/NewComponent/PrivatePage/Overview.css
+++ b/client/NewComponent/PrivatePage/Overview.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     top: 0%;
-    left: 0;
+    left: 0%;
     position: relative;
 }
 .overview {
@@ -14,12 +14,12 @@
     position: absolute;
     width: inherit;
     height: 100%;
-    background-color: lightblue;
+    background-color: skyblue;
     top:  -2%;
-    left: 0%;
+    left: 0;
     overflow-y: scroll;
     overflow-x: hidden;
-    padding: 8px;
+    padding: 2px;
     
 }
 .overview::-webkit-scrollbar{
@@ -28,7 +28,7 @@
   .vertical-scrollbar{
     position: absolute;
     top: 0%;
-    left: 101%;
+    left: 98%;
     width: 2px;
     height: 100px;
     display: block;
