--- a/client/NewComponent/Pagination/Pagination.css
+++ b/client/NewComponent/Pagination/Pagination.css
@@ -51,3 +51,9 @@
 width: 22%;
 background-color: rgba(0, 0, 0, 0.7);
 }
+.page-wrapper.none {
+  display: none;
+}
+.page-wrapper.hide {
+  display: none;
+}
