--- a/client/NewComponent/Child_Page_Ul/NFTs.css
+++ b/client/NewComponent/Child_Page_Ul/NFTs.css
@@ -62,16 +62,16 @@
     opacity: 0.2;
     z-index: 2;
 }
-.categorySpan.yes{
-    position: absolute;
+.categorySpan.view{
+    /* position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100%; */
     background: linear-gradient(135deg, rgba(30,30,30,0.9), rgba(60,60,60, 0.8), rgba(90,90,90, 0.7));
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     animation: fadeIn 3s ease-in-out infinte;
     z-index: 20;
   }
@@ -106,4 +106,83 @@
 }
 .header.inner{
     margin-top: -36px;
+}
+.fetch-top {
+  width: 100%;
+  height: 200px;
+  position: relative;
+  background-color: white;
+  display: flex;
+}
+.fetch-page{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: inherit;
+}
+
+.fetch-page span{
+  width: 50%;
+  height: 96%;
+  animation: fetchGradient 5s infinite ease-in-out;
+  margin: 6px;
+    /* font-size: 18px;
+     font-weight: bold;
+     background-color: white;
+     padding: 10px 12px;
+     border-radius: 4px; */
+}
+.fetch-page span:first-child{
+  animation: showGradient 5s infinite ease-in-out;
+}
+@keyframes fetchGradient {
+  0% {
+    background: linear-gradient(to right, rgba(90, 90, 90, 0.8) 0%,
+                   rgba(90, 90, 90, 0.6) 50%,
+                   rgba(90, 90, 90, 0.4) 100%);
+  }
+  33% {
+    background: linear-gradient(to right, rgba(60, 60, 60, 0.6) 0%,
+                   rgba(60, 60, 60, 0.4) 50%,
+                   rgba(60, 60, 60, 0.8) 100%);
+  }
+  66% {
+    background: linear-gradient(to right, rgba(30, 30, 30, 0.4) 0%,
+                   rgba(30, 30, 30, 0.6) 50%,
+                   rgba(30, 30, 30, 0.8) 100%);
+  }
+  100% {
+    background: linear-gradient(to right, rgba(120, 120, 120, 0.7) 0%,
+                   rgba(120, 120, 120, 0.4) 50%,
+                   rgba(120, 120,120, 0.8) 100%);
+  }
+}
+
+
+@keyframes showGradient {
+  0% {
+    background: linear-gradient(to right, rgba(120, 120, 120, 0.7) 0%,
+                   rgba(120, 120, 120, 0.4) 50%,
+                   rgba(120, 120,120, 0.8) 100%);
+  }
+  33% {
+    background: linear-gradient(to right, rgba(30, 30, 30, 0.4) 0%,
+                   rgba(30, 30, 30, 0.6) 50%,
+                   rgba(30, 30, 30, 0.8) 100%);
+  }
+  66% {
+    background: linear-gradient(to right, rgba(90, 90, 90, 0.8) 0%,
+                   rgba(90, 90, 90, 0.6) 50%,
+                   rgba(90, 90, 90, 0.4) 100%);
+  }
+  100% {
+    background: linear-gradient(to right, rgba(60, 60, 60, 0.6) 0%,
+                   rgba(60, 60, 60, 0.4) 50%,
+                   rgba(60, 60, 60, 0.8) 100%);
+  }
 }
