--- a/client/NewComponent/Child_Page_Ul/Other_Category/AllCategory/Category.css
+++ b/client/NewComponent/Child_Page_Ul/Other_Category/AllCategory/Category.css
@@ -6,8 +6,44 @@
     gap: 4px;
     height: auto;
     margin-bottom: 20px;
-    padding-bottom: 4px;
-  
+    padding-bottom: 4px; 
+}
+.categoryTop.yes{
+  width: 200%;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 6px;
+  margin-bottom: -10px;
+  animation: pulseGradient 5s infinite ease-in-out;
+}
+@keyframes pulseGradient {
+  0% {
+    background: linear-gradient(to right, rgba(90, 90, 90, 0.8) 0%,
+                   rgba(90, 90, 90, 0.6) 50%,
+                   rgba(90, 90, 90, 0.4) 100%);
+  }
+  50% {
+    background: linear-gradient(to right, rgba(60, 60, 60, 0.6) 0%,
+                   rgba(60, 60, 60, 0.4) 50%,
+                   rgba(60, 60, 60, 0.8) 100%);
+  }
+  100% {
+    background: linear-gradient(to right, rgba(30, 30, 30, 0.4) 0%,
+                   rgba(30, 30, 30, 0.6) 50%,
+                   rgba(30, 30, 30, 0.8) 100%);
+  }
+}
+.categoryTop.yes span{
+     font-size: 18px;
+     font-weight: bold;
+     background-color: white;
+     padding: 10px 12px;
+     border-radius: 4px;
 }
 .categoryTop.hide{
   display: none;
@@ -21,30 +57,57 @@
     background-color: lavender;
 }
 .filtered.yes{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, rgba(30,30,30,0.9), rgba(60,60,60, 0.8), rgba(90,90,90, 0.7));
+    position: relative;
+    width: 40%;
+    min-height: 100px;
+    background-color: rgba(60,60,60, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
     animation: fadeIn 3s ease-in-out infinte;
-    z-index: 20;
   }
   @keyframes fadeIn {
     0%, 100% {
-      background: linear-gradient(135deg, rgba(30,30,30, 0.9), rgba(60,60,60, 0.8), rgba(90,90,90, 0.7));
+      background-color:  rgba(60,60,60, 0.8);
     }
     50% {
-      background: linear-gradient(135deg, rgba(30,30,30, 0.5), rgba(60,60,60, 0.4), rgba(90,90,90, 0.3));
+      background-color: rgba(30,30,30, 0.5);
     }
 }
+
 .filteredImage{
     width: 100%;
-    height:  150px;
+    height:  100%;
     object-fit: cover;
+    /* background-color: red; */
+}
+.image-wrappers{
+  position: relative;
+  display: flex;
+  width: 100%;
+  background-color: rgba(30,30,30, 0.5);
+  height: 150px;
+  animation: pulseBackground 3s infinite;
+}
+@keyframes pulseBackground {
+  0% {
+    background-color: rgba(30,30,30, 0.5);
+  }
+  25% {
+    background-color: rgba(30,30,30, 0.4);
+  }
+  25% {
+    background-color: rgba(30,30,30, 0.7);
+  }
+  50% {
+    background-color: rgba(30,30,30, 0.4);
+  }
+  75% {
+    background-color: rgba(30,30,30, 0.8);
+  }
+  100% {
+    background-color: rgba(30,30,30, 0.5);
+  }
 }
  .cat-label{
     display: flex;
@@ -59,6 +122,9 @@
  }
  .cat-label.hide{
 display: none;
+ }
+ .cat-label.conceal {
+  display: none;
  }
  .cat-label div{
     position: relative;
