--- a/client/NewComponent/FooterPage/CategoryPage/Category.css
+++ b/client/NewComponent/FooterPage/CategoryPage/Category.css
@@ -4,6 +4,7 @@
   /* margin: 8px 16px; */
   flex-direction: column;
   width: 100%;
+  margin-top: -8px;
 }
 .categoryClass span{
    font-size: 24px;
@@ -34,7 +35,7 @@
     gap: 12px;
     height: auto;
     background-color: lightcyan;
-    border-top: 1px solid rgba(0, 0, 0, 0.7);
+    /* border-top: 1px solid rgba(0, 0, 0, 0.7); */
     margin-bottom: 12px;
 
 }
@@ -47,6 +48,7 @@
     background-color: white;
     position: relative;
     padding-left: 12px;
+    margin-top: 0px;
     
 }
 
@@ -329,4 +331,122 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.fetch-page{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: inherit;
+}
+
+.fetch-pages span{
+  width: 50%;
+  height: 96%;
+  animation: fetchGradients 5s infinite ease-in-out;
+  margin: 6px;
+    /* font-size: 18px;
+     font-weight: bold;
+     background-color: white;
+     padding: 10px 12px;
+     border-radius: 4px; */
+}
+@keyframes fetchGradients {
+  0% {
+    background: linear-gradient(to right, rgba(90, 90, 90, 0.8) 0%,
+                   rgba(90, 90, 90, 0.6) 50%,
+                   rgba(90, 90, 90, 0.4) 100%);
+  }
+  33% {
+    background: linear-gradient(to right, rgba(60, 60, 60, 0.6) 0%,
+                   rgba(60, 60, 60, 0.4) 50%,
+                   rgba(60, 60, 60, 0.8) 100%);
+  }
+  66% {
+    background: linear-gradient(to right, rgba(30, 30, 30, 0.4) 0%,
+                   rgba(30, 30, 30, 0.6) 50%,
+                   rgba(30, 30, 30, 0.8) 100%);
+  }
+  100% {
+    background: linear-gradient(to right, rgba(120, 120, 120, 0.7) 0%,
+                   rgba(120, 120, 120, 0.4) 50%,
+                   rgba(120, 120,120, 0.8) 100%);
+  }
+}
+
+.no-data{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  padding-bottom: 0px;
+  align-items: center;
+  justify-content: center;
+  animation: fetchGradients 5s infinite ease-in-out;
+}
+
+@keyframes loadGradients {
+  0% {
+    background: linear-gradient(to right, rgba(90, 100, 90, 0.8) 0%,
+                   rgba(90, 90, 100, 0.6) 50%,
+                   rgba(100, 90, 90, 0.4) 100%);
+  }
+  33% {
+    background: linear-gradient(to right, rgba(60, 70, 60, 0.6) 0%,
+                   rgba(60, 60, 60, 0.4) 50%,
+                   rgba(60, 50, 60, 0.8) 100%);
+  }
+  66% {
+    background: linear-gradient(to right, rgba(30, 30, 30, 0.4) 0%,
+                   rgba(50, 30, 30, 0.6) 50%,
+                   rgba(30, 30, 40, 0.8) 100%);
+  }
+  100% {
+    background: linear-gradient(to right, rgba(120, 120, 120, 0.7) 0%,
+                   rgba(120, 100, 120, 0.4) 50%,
+                   rgba(120, 120,110, 0.8) 100%);
+  }
+}
+
+/* .initial{
+    width: 100%;
+  height: 300px;
+  animation: initialGradients 5s infinite ease-in-out;
+  margin-top: 62px;
+  margin-bottom: 32px;
+}
+@keyframes initialGradients {
+  0% {
+    background: linear-gradient(to right, rgba(90, 90, 90, 0.8) 0%,
+                   rgba(90, 90, 90, 0.6) 50%,
+                   rgba(90, 90, 90, 0.4) 100%);
+  }
+  33% {
+    background: linear-gradient(to right, rgba(60, 60, 60, 0.6) 0%,
+                   rgba(60, 60, 60, 0.4) 50%,
+                   rgba(60, 60, 60, 0.8) 100%);
+  }
+  66% {
+    background: linear-gradient(to right, rgba(30, 30, 30, 0.4) 0%,
+                   rgba(30, 30, 30, 0.6) 50%,
+                   rgba(30, 30, 30, 0.8) 100%);
+  }
+  100% {
+    background: linear-gradient(to right, rgba(120, 120, 120, 0.7) 0%,
+                   rgba(120, 120, 120, 0.4) 50%,
+                   rgba(120, 120,120, 0.8) 100%);
+  }
+} */
+.initial-wrapper{
+  width: 100%;
+  height: 430px;
+  display: flex;
+  position: relative;
+  margin-top: 62px;
+  margin-bottom: 20px;
+  background-color: rgba(0, 0, 0, 0.2);
 }
