--- a/client/NewComponent/Icons/SidebarComponent/Sidebar.css
+++ b/client/NewComponent/Icons/SidebarComponent/Sidebar.css
@@ -6,9 +6,9 @@
     background-color: white;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 97%;
-    top: 0%;
+    width: 102%;
+    height: 100%;
+    top: -2%;
     left: 0%;
     margin-bottom: 0px;
     transform: translateX(-100%);
@@ -45,9 +45,12 @@
     margin-top: 45px;
 }
 .sidebar-wrapper div:last-child{
-    margin-top: 50px;
+    margin-top: 44px;
     color: red;
     font-size: 24px;
+}
+.sidebar-wrapper div:last-child span:first-child{
+    margin-top: 6px;
 }
 .sidebar-header{
     display: flex;
