--- a/client/NewComponent/MainBodyPage/Alerts.css
+++ b/client/NewComponent/MainBodyPage/Alerts.css
@@ -3,20 +3,26 @@
     font-size: 18px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 8px;
-    position: absolute;
-    top: 50%;
+    position: fixed;
+    top: 20px;
     left: 50%;
-    transform: translateX(-50%);
+    padding: 8px 6px;
+    /* background-color: white; */
+    transform: translateX(-50%); 
     opacity: 0;
     visibility: hidden;
+    border-radius: 4px;
     z-index: 20;
-    background-color: lightblue;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    min-height: 20px;
 }
 .alert.success{
     color: green;
     opacity: 1;
-    visibility: visible;
+    visibility: visible;;
 }
 .alert.danger{
     color: red;
+    opacity: 1;
+    visibility: visible;
 }
