--- a/client/NewComponent/MainBodyPage/ImageFrontPage/ImageShow.css
+++ b/client/NewComponent/MainBodyPage/ImageFrontPage/ImageShow.css
@@ -1,7 +1,7 @@
 
 .image-view{
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.7);
+    background:  linear-gradient(to right, rgba(255, 255, 255, 0.7), rgba(200,210,200,0.9), rgba(240,200,220, 0.4));
     position: relative;
     height: 255px;
     display: flex;
@@ -13,8 +13,33 @@
     padding-right: 8px;
     padding-top: 6px;
     padding-bottom: 8px;
-
 }
+.image-group.hide{
+    animation: imageFade 5s ease-in-out infinte;
+}
+@keyframes imageFade {
+    0% {
+      background:  linear-gradient(to right, rgba(255, 255, 255, 0.7), rgba(200,210,200,0.9), rgba(240,200,220, 0.4));
+    }
+    50% {
+      background: linear-gradient(to right, rgba(220,200,240, 0.4), rgba(200,230,255, 0.8), rgba(220,255,200, 0.6));
+    }
+    100% {
+      background: linear-gradient(to right, rgba(250,240,220, 0.9), rgba(240,250,220, 0.6), rgba(230,210,255, 0.4));
+    }
+    }
+.image-view.views{
+    background: linear-gradient(350deg, rgba(200,210,200,0.9), rgba(60,60,60, 0.8), rgba(150,130,190, 0.7));
+    animation: fadeView 3s ease-in-out infinte;
+}
+@keyframes fadeView {
+    0%, 100% {
+      background: linear-gradient(135deg, rgba(120,170,160, 0.9), rgba(60,60,60, 0.8), rgba(90,90,90, 0.7));
+    }
+    50% {
+      background: linear-gradient(135deg, rgba(170,160,120, 0.9), rgba(150,160,60, 0.8), rgba(20,120,220, 0.4));
+    }
+    }
 .general{
     display: flex;
     flex-direction: column;
@@ -49,13 +74,15 @@
     padding-bottom: 10px;
     /* object-fit: cover; */
       /* height: 450px;  */
-    
+}
+.image-group.hide {
+    background-color: rgba(30,30,30, 0.5);
 }
 .imageClass{
     margin-bottom: 5px;
     border-radius: 8px;
     }
-    .imageNone{
+    .image-view .imageNone{
     margin-bottom: 5px;
     border-radius: 8px;
     position: absolute;
@@ -68,7 +95,7 @@
     align-items: center;
     justify-content: center;
     animation: fadeIn 3s ease-in-out infinte;
-    z-index: 20;
+    z-index: 30;
   }
   @keyframes fadeIn {
     0%, 100% {
@@ -77,8 +104,6 @@
     50% {
       background: linear-gradient(135deg, rgba(30,30,30, 0.5), rgba(60,60,60, 0.4), rgba(90,90,90, 0.3));
     }
-
- 
     }
 .image-group.one{
     margin-top: -195px;
@@ -115,3 +140,7 @@
 50% {opacity: 0;}
 100% {opacity: 1}
 }
+/* .class-zero{
+ height: 50px;
+ background-color: rgba(90, 60, 90, 0.5);
+} */
